# vsailorproject

./: .gitignore  README.md  SailorProject.xmind  text.csv  text.txt  textScope.csv
SerialScope/: SerialScope.pro  SerialScope_zh_CN.ts  img.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  readme.md  vcafesclient.cpp  vcafesclient.h  vopenbutton.cpp  vopenbutton.h  vqtexteditline.cpp  vqtexteditline.h  vserialcom.cpp  vserialcom.h
SerialScope/vAnsiBash/: vansibash.cpp  vansibash.h
SerialScope/vCsv/: CSVHelper.cpp  CSVHelper.h
SerialScope/vCustomWidget/: vcustomwidget.cpp  vcustomwidget.h
SerialScope/vDebug/: vdebug.cpp  vdebug.h
SerialScope/vOpenGL/: model.cpp  model.h  openglscene.cpp  openglscene.h  point3d.h  vopenglwidget.cpp  vopenglwidget.h
SerialScope/vPlainTextEdit/: vplaintextedit.cpp  vplaintextedit.h
SerialScope/vQCustomplot/: qcustomplot.cpp  vTracer.cpp  vqcustomplot.cpp  vqcustomplot.h  vtracer.h
SerialScope/vQLineEditHex/: vqlineedithex.cpp  vqlineedithex.h
SerialScope/vQTextBrowserHtml/: vqtextbrowserhtml.cpp  vqtextbrowserhtml.h
SerialScope/vQTextEdit/: vqtextedit.cpp  vqtextedit.h
SerialScope/vQWebEngineView/: vqwebengineview.cpp  vqwebengineview.h
SerialScope/vQss/: vQss.css  vQss_black.css
SerialScope/vQtConfig/: vCombox.cpp  vCombox.h
SerialScope/vSeaskyPort/: vseaskyport.cpp  vseaskyport.h
SerialScope/vSeaskyPort/Protocol/: bsp_protocol.cpp  bsp_protocol.h  (+3 more)
SerialScope/vSerialPortCfg/: qserialportcft.cpp  qserialportcft.h  vcodeconverter.cpp  vcodeconverter.h  vqserialrxthread.cpp  vqserialrxthread.h  vqserialtxthread.cpp  vqserialtxthread.h  vserialport.cpp  vserialport.h
SerialScope/vTcp/: vqtcpserver.cpp  vqtcpserver.h  vqtcpsocket.cpp  vqtcpsocket.h  vserverthread.cpp  vserverthread.h  vtcpctr.cpp  vtcpctr.h
project/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  StatusDialog.h  demo.pro  main.cpp
release/: text.csv
vSeaskyPort_wpf_dll_lib/: readme.md
vText/: vComCsv.csv  vScope.csv  vTcpCsv.csv
(+69 files in other folders)
